# aiofilesir

./: .gitattributes  .gitignore  LICENSE  README.fa.md  README.md  conftest.py  pyproject.toml  swagger.yaml
.github/workflows/: ci.yml
examples/: live_upload_and_link.py
src/filesir/: __init__.py  client.py  exceptions.py  logging.py  models.py  pagination.py  transport.py
src/filesir/resources/: __init__.py  auth.py  base.py  files.py  folders.py  links.py  sharing.py  starring.py  storage.py  tags.py  workspaces.py
src/filesir/uploads/: __init__.py  resource.py  sessions.py  sources.py
src/filesir/uploads/strategies/: __init__.py  base.py  s3_multipart.py  s3_single.py  single.py  tus.py
tests/: test_auth.py  test_direct_url.py  test_links_path_quirk.py  test_logging.py  test_models.py  test_pagination.py  test_property_multipart.py  test_resources.py  test_retry_policy.py  test_transport.py  test_uploads.py
